--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <title>Hard Rock - Song Lyric App</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
